# ModNES

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: cartridge.hpp  cpu.hpp  cpu_bus.hpp  cpu_opcodes.hpp  definitions.hpp  emulator.hpp  ppu.hpp  ppu_bus.hpp  registers.hpp
include/mappers/: mapper.hpp  mapper_nrom.hpp
src/: cartridge.cpp  cpu.cpp  cpu_bus.cpp  emulator.cpp  ppu.cpp  ppu_bus.cpp
src/mappers/: mapper.cpp  mapper_nrom.cpp
